--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,7 @@ Release/*.manifest
 *.pdb
 
 # Logs
-BuldLog.htm
+BuildLog.htm
 *.lastbuildstate
 *.log
 *.Log
@@ -92,3 +92,4 @@ Release/*.app
 .svn/*
 *.bak
 *.dat
+*.rsp
